# goforit

./: .gitignore  PROMPT.md  README.md  last_code.json  pyproject.toml  requirements.txt
backend/: language_runners.py  main.py
backend/static/: index.html
backend/static/js/: package-lock.json
backend/tests/: conftest.py  test_base.py  test_c_runner.py  test_c_to_asm_runner.py  test_cpp_runner.py  test_java_runner.py  test_javascript_runner.py  test_language_runners.py  test_python_runner.py
goforit/: cli.py  default_code.json  graphviz_processor.py  language_runners.py  main.py
goforit/examples/: Assembly.asm  CToAssembly.c  CToObjdump.c  Example.java  assembly_x86_64.asm
goforit/runners/: __init__.py  assembly_runner.py  base.py  brainfuck_runner.py  c_runner.py  c_to_asm_runner.py  c_to_objdump_runner.py  cpp_runner.py  go_runner.py  haskell_runner.py  java_runner.py  javascript_runner.py  lua_runner.py  prolog_runner.py  python_runner.py  ruby_runner.py  rust_runner.py  typescript_runner.py  utils.py
goforit/runners/tests/: conftest.py  test_assembly_runner.py  test_c_runner.py  test_c_to_asm_runner.py  test_c_to_objdump_runner.py  test_cpp_runner.py  test_go_runner.py  test_java_runner.py  test_python_runner.py  test_utils.py
goforit/static/: arm64.css  index.html  styles.css
goforit/static/examples/: Assembly.asm  CToAssembly.c  Go.go  (+6 more)
goforit/tests/: test_c_runner.py  test_c_to_asm_runner.py  test_cpp_runner.py  test_go_runner.py  test_java_runner.py  test_javascript_runner.py  test_python_runner.py  test_rust_runner.py  test_typescript_runner.py
(+20 files in other folders)
